# Leg_Detection_Using_Adaboost

./: CMakeLists.txt  README.md  xy_data.txt
include/: adaboost.hpp  feature.hpp  label.hpp  loaddata.hpp  matplotlibcpp.hpp  normalize.hpp  utile.hpp  weaklearner.hpp
src/: demo.cpp  main.cpp  test.cpp  train.cpp
